Ticket #1292 (closed defect: fixed)

Opened 1 year ago

Last modified 1 year ago

RTP and UDP access output get stuck

Reported by: courmisch Assigned to: courmisch
Priority: normal Milestone: 0.9.0 bugs
Component: Stream output Version: master
Severity: normal Keywords:
Cc: Platform(s): all
Difficulty: unknown Work status: Not started

Description

The RTP stream output and the UDP access output may get stuck forever at the end of the stream: the parent thread sets b_die and joins, while the sending thread is blocked in block_FifoGet().

Similarly, they may get stuck for fairly long within mwait().

This is not specific at all to subtitles, but is especially common when streaming subtitles because delay between packets tend to be much longer.

Change History

13/09/07 18:42:45 changed by courmisch

  • summary changed from RTP and UDP get stuck to RTP and UDP access output get stuck.

13/09/07 18:43:04 changed by courmisch

  • status changed from new to assigned.
  • owner set to courmisch.

16/09/07 14:36:29 changed by courmisch

  • status changed from assigned to closed.
  • resolution set to fixed.

(In [22099]) Force the sending threads to wakeup at exit - closes #1292