Force the sending threads to wakeup at exit - closes #1292